Fix broken MacOS css-preprocessor build
The node-sass compilation was broken on MacOS. Switched to native
JavaScript LESS CSS procompiler. This required upgrading Font Awesome,
switching to Skeleton LESS and removing PostCSS linter.

--- a/assets/styles/layout.less
+++ b/assets/styles/layout.less
@@ -1,29 +1,28 @@
-@import "node_modules/skeleton-css/css/skeleton";
-@import "node_modules/compass-mixins/lib/compass/css3/flexbox";
+@import "node_modules/skeleton-less/less/skeleton";
 @import "media_queries";
 
 body > header, article, main, footer {
-  @extend .container;
+  .container();
 }
 
 body > header {
-  @include display-flex;
-  @include flex-direction(column);
-  @include flex-wrap(nowrap);
-  @include justify-content(space-between);
-  @include align-items(flex-start);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
   padding-top: 0.5em;
 }
 
 body > header > .title {
-  @include align-self(center);
+  align-self: center;
 }
 
 body > header > nav {
-  @include align-self(flex-end);
+  align-self: flex-end;
 }
 
-@media ($medium) {
+@media (@medium) {
   body > header > nav {
     display: none;
   }
@@ -67,7 +66,7 @@ body > header > nav {
   left: 0;
 }
 
-@media ($medium) {
+@media (@medium) {
 
   .stat-block {
     position: static;
@@ -105,12 +104,13 @@ article header {
 }
 
 #playtest {
+  padding-top: 1em;
+  padding-bottom: 1em;
   margin-bottom: 1em;
 }
 
 #playtest .content {
-  padding-top: 1em;
-  @extend .container;
+  .container();
 }
 
 .content table td {
